--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,4 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set-option -g mouse on
+set-window-option -g mode-keys vi
